--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      body {
+        background-color: #372e4c;
+      }
+    </style>
   </head>
   <body>
-    <h1 class="onlytitle">Hello, World!</h1>
+    <h1 class="onlytitle">W!</h1>
 
     <script src="./js/task-1.js"></script>
     <script src="./js/task-2.js"></script>
     <script src="./js/task-3.js"></script>
+    <script src="./js/task-4.js"></script>
   </body>
 </html>
